# open-rmf-fleet-template

./: .gitignore  .gitmodules  README.md
src/rmf_scratch/: .gitignore  README.md
src/rmf_scratch/rmf_scratch/: CMakeLists.txt  package.xml
src/rmf_scratch/rmf_scratch/config/: tinyRobot_config.yaml
src/rmf_scratch/rmf_scratch_assets/: CMakeLists.txt  package.xml
src/rmf_scratch/rmf_scratch_fleet_adapter/: package.xml  setup.cfg  setup.py
src/rmf_scratch/rmf_scratch_fleet_adapter/launch/: fleet_adapter.launch.xml
src/rmf_scratch/rmf_scratch_fleet_adapter/rmf_scratch_fleet_adapter/: fleet_adapter.py
src/rmf_scratch/rmf_scratch_gz/: CMakeLists.txt  package.xml
src/rmf_scratch/rmf_scratch_gz/config/: office.rviz
src/rmf_scratch/rmf_scratch_gz/launch/: office.launch.xml
src/rmf_scratch/rmf_scratch_maps/: CMakeLists.txt  package.xml
src/rmf_scratch/rmf_scratch_maps/maps/office/: office.building.yaml
src/rmf_scratch/rmf_scratch_tasks/: package.xml  setup.cfg  setup.py
src/rmf_scratch/rmf_scratch_tasks/rmf_scratch_tasks/: dispatch_patrol.py
src/rmf_template/rmf_template/: CMakeLists.txt  package.xml
src/rmf_template/rmf_template/config/: robot_config.yaml
src/rmf_template/rmf_template/launch/: robot.launch.xml
src/rmf_template/rmf_template_fleet_adapter/: config.yaml  package.xml  setup.cfg  setup.py
src/rmf_template/rmf_template_fleet_adapter/rmf_template_fleet_adapter/: RobotClientAPI_HTTP.py  RobotClientAPI_LoRa.py  fleet_adapter.py
src/rmf_template/rmf_template_gz/: CMakeLists.txt  package.xml
src/rmf_template/rmf_template_gz/launch/: real_robot.launch.xml  simulation.launch.xml
src/rmf_template/rmf_template_maps/: CMakeLists.txt  package.xml
src/rmf_template/rmf_template_tasks/: package.xml  setup.cfg  setup.py
src/rmf_template/rmf_template_tasks/rmf_template_tasks/: dispatch_delivery.py  dispatch_patrol.py
