<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_template_fleet_adapter</name>
  <version>0.1.0</version>
  <description>Fleet adapter template for my robot fleet</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>rmf_adapter</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_task_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
