<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_template_gz</name>
  <version>0.0.0</version>
  <description>Gazebo simulation launcher for rmf_template</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>rmf_demos_gz</exec_depend>
  <exec_depend>rmf_template</exec_depend>
  <exec_depend>rmf_template_maps</exec_depend>
  <exec_depend>rmf_template_fleet_adapter</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
