<?xml version="1.0"?>
<package format="3">
  <name>rmf_template_tasks</name>
  <version>0.1.0</version>
  <description>RMF Template - task dispatch tools</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>rmf_task_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
